--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-SocketIO==5.3.6
-gunicorn==21.2.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-pandas==2.1.1
-numpy==1.24.3
-python-socketio==5.8.0
-python-engineio==4.7.1 
+Flask
+requests
+beautifulsoup4
+websockets
+schedule
+pytz
+pandas
+numpy
+sqlalchemy
+psycopg2-binary
+passlib[bcrypt]
+python-dotenv 
